--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
 	background: #E8ECF0;
-	font-family: arial;
+	font-family: sans-serif;
 	margin: 0;
 }
 
@@ -23,7 +23,7 @@ nav ul {
 }
 
 nav ul li {
-	background: #DEE2E6 ;
+	background: #DEE2E6;
 	display: inline-block;
 	list-style-type: none;
 	padding: 5px 15px;
@@ -35,16 +35,27 @@ nav ul li a {
 	text-decoration: none;
 }
 
-div.row::after {
-	clear: both;
+#display {
+	background-color: #F5F5F5;
+  	font-family: Lato, sans-serif;;
+  	text-align: center;
+  	padding: 5em 1em;
 }
-div.col {
-	background: #DEE2E6;
-	color: #DEE2E6;
-	border-radius: 5px;
-	padding: 10px;
-	margin: 10%;
-	width: 80%;
+
+#display h1 {
+  	font-weight: 400;
+  	font-size: 3.2em;
+  	margin: 0;
+ 	color: #333333;
+}
+
+#display .bio {
+	font-weight: 300;
+ 	font-size: 19.2;
+  	margin: 15px 0px 20px;
+  	color: #333333;
+  	display: block;
+  	box-sizing: border-box;
 }
 
 
