--- a/main.css
+++ b/main.css
@@ -4,19 +4,15 @@
 
 body {
 	background: #3E4649;
-	color: #f7f7f7;
+	color: #fff;
 	font-family: 'Montserrat', sans-serif;
 }
-h1,
-h2 {
+h1 {
 	font-weight: bold;
 }
 p {
 	font-size: 16px;
 	color: #cdcdcd;
-}
-.navbar {
-	margin-bottom: 0;
 }
 .jumbotron {
 	background: #3498DB;
@@ -27,23 +23,7 @@ p {
 	color: white;
 	font-size: 26px;
 }
-.navbar-inverse {
-	background: #2E2F31;
-	border: 0;
-} 
-.navbar-inverse .navbar-nav li a {
-	color: #f7f7f7;
-	font-size: 16px;
-}
-.navbar-inverse .navbar-nav li a:hover {
-	background: #27A967;
-}
-.navbar-inverse .navbar-nav .dropdown-menu li a:hover {
-	background: #2C463C;
-}
-.dropdown-menu li a {
-	padding: 10px;
-}
+
 .btn-primary {
 	color: #fff;
 	background-color: transparent;
