--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 body {
 	background: #3E4649;
-	color: #fff;
+	color: white;
 	font-family: 'Montserrat', sans-serif;
 }
 h1 {
@@ -14,6 +14,37 @@ p {
 	font-size: 16px;
 	color: #cdcdcd;
 }
+
+.navbar{
+
+}
+
+.navbar-custom {
+	background-color: #EEB868;
+}
+
+.nav-link { 
+	color: white;
+	margin-right: 1em !important;
+}
+
+.nav-link:hover { 
+	background: white; 
+	color: #EEB868; 
+
+}
+
+.navbar-collapse { 
+	justify-content: flex-end;
+}
+
+/* HOW TO GET HAMBURGER LINES? */
+
+.navbar-toggler {  
+	background: white;
+	opacity: .25;
+}
+
 .jumbotron {
 	background: #3498DB;
 	color: white;
@@ -36,10 +67,49 @@ p {
 	border-color: white;
 }
 
+.about {
+	margin: 4em 0;
+	padding: 1em;
+	position: relative;
+}
+
+.about h1{
+	color:#EEB868;
+	margin: 2em;
+}
+
+.about img{
+	height: 100%;
+    width: 100%;
+    border-radius: 50%
+}
+
+.about span{
+	display: block;
+	color: #456990;
+	position: absolute;
+	left: 115px;
+}
+
+.about .desc{
+	padding: 2em;
+	border-left:4px 
+	solid #3498DB;
+}
+
+.about .desc p{
+	line-height:2;
+	color: #456990;
+}
 
 
 
 
 /*
 blue: #3498DB;
+orange: #EEB868;
+red: #EF767A6;
+navy: #456990;
+green: #49DCB1;
+https://coolors.co/49dcb1-3498db-eeb868-456990-ef767a
 */
