--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 body {
 	background: #3E4649;
-	color: white;
+	color: #fff;
 	font-family: 'Montserrat', sans-serif;
 }
 h1 {
@@ -24,12 +24,12 @@ p {
 }
 
 .nav-link { 
-	color: white;
+	color: #fff;
 	margin-right: 1em !important;
 }
 
 .nav-link:hover { 
-	background: white; 
+	background: #fff; 
 	color: #EEB868; 
 
 }
@@ -41,7 +41,7 @@ p {
 /* HOW TO GET HAMBURGER LINES? */
 
 .navbar-toggler {  
-	background: white;
+	background: #fff;
 	opacity: .25;
 }
 
@@ -51,24 +51,24 @@ p {
 
 .jumbotron {
 	background: #3498DB;
-	color: white;
+	color: #fff;
 	text-align: center;
 }
 .jumbotron p {
-	color: white;
+	color: #fff;
 	font-size: 26px;
 }
 
 .btn-primary {
-	color: white;
+	color: #fff;
 	background-color: transparent;
-	border-color: white;
+	border-color: #fff;
 	margin-bottom: 5px;
 }
 .btn-primary:hover {
-	color: #3498DB;
-	background-color: white;
-	border-color: white;
+	color: #3498DB; 
+	background-color: #fff;
+	border-color: #fff;
 }
 
 .about {
@@ -107,16 +107,154 @@ p {
 }
 
 .portfolio {
-	margin: 4em 0;
-    position: relative;	
-}
-.portfolio h1 {
-	color: #EEB868;
-	margin: 2em;	
+  padding-bottom: 100px;
 }
 
+.portfolio .btn:focus, .portfolio .btn:hover, .portfolio .btn.focus.active {
+  box-shadow: none !important;
+  outline: 0 !important;
+}
 
+.portfolio .btn-group .btn {
+  border-radius: 0px !important;
+  padding-left: 0px;
+  font-weight: 700;
+  color: #456990;
+}
 
+.portfolio .btn-group .btn:hover {
+  color: #3498DB;
+}
+
+.portfolio .btn-group:not(:first-child) > .btn, .portfolio .btn-group > .btn:not(:first-child) {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.portfolio .btn.active {
+  color: #3498DB;
+}
+
+.inner-box {
+  position: relative;
+}
+
+.inner-box .image {
+  position: relative;
+  overflow: hidden;
+}
+
+.inner-box .image img {
+  position: relative;
+  width: 100%;
+  border-radius: 0%;
+  display: block;
+  transition: all 0.3s;
+}
+
+.inner-box .image .overlay-box {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  top: 0px;
+  z-index: 2;
+  opacity: 0;
+  display: block;
+  transition: all .6s ease;
+  overflow: hidden;
+}
+
+.inner-box .image .overlay-box:before {
+  position: absolute;
+  content: '';
+  left: -450px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  display: block;
+  opacity: 0;
+  transition: all 0.4s;
+  background-color: rgba(69, 105, 144, 0.7);
+}
+
+.inner-box:hover .image img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.inner-box:hover .image .overlay-box:before {
+  opacity: 1;
+  left: 0px;
+}
+
+.inner-box:hover .image .overlay-box {
+  opacity: 1;
+}
+
+.inner-box:hover .image .overlay-box .overlay-content h5 {
+  -webkit-transform: translateX(0px);
+  transform: translateX(0px);
+}
+
+.inner-box:hover .image .overlay-box .overlay-content p {
+  -webkit-transform: translateX(0px);
+  transform: translateX(0px);
+}
+
+.inner-box .image .overlay-box .overlay-inner {
+  position: absolute;
+  left: 0px;
+  bottom: 30px;
+  z-index: 1;
+  padding: 10px 40px;
+}
+
+.inner-box .image .overlay-box .overlay-inner .overlay-content i {
+  font-size: 28px;
+}
+
+.inner-box .image h3 {
+  color: #fff;
+}
+
+.overlay-content h5 {
+  text-transform: capitalize;
+  background: rgba(255, 255, 255, 0.9);
+  padding: 0px 8px;
+  margin-bottom: 0px;
+  -webkit-transform: translateX(-150px);
+  transform: translateX(-150px);
+  transition: all 0.3s;
+}
+
+.overlay-content p {
+  font-size: 14px;
+  margin-bottom: 0px;
+  padding: 0px 8px;
+  margin-top: 2px;
+  text-transform: capitalize;
+  background: rgba(255, 255, 255, 0.9);
+  color: #EEB868;
+  -webkit-transform: translateX(-150px);
+  transform: translateX(-150px);
+  transition: all 0.5s;
+}
+
+.portfolio-image {
+  width: 60px;
+  height: 60px;
+  display: inline-block;
+  text-align: center;
+  background: #000;
+  color: #fff;
+  padding-top: 16px;
+  position: absolute;
+  top: 40%;
+  font-size: 22px;
+  margin-left: -28px;
+  left: 50%;
+}
 
 /*
 blue: #3498DB;
