--- a/main.css
+++ b/main.css
@@ -257,6 +257,43 @@ p {
   left: 50%;
 }
 
+
+/* shit for project pages */
+.page-title h1 {
+  position: relative;
+  padding-bottom: 30px;
+}
+
+.page-title h1:after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  bottom: 0px;
+  width: 40px;
+  height: 4px;
+  margin-left: -25px;
+  background: #EEB868;
+}
+
+.section {
+  padding: 45px 0px;
+}
+
+.project-info {
+  margin-top: 30px;
+}
+
+.text-center h1 {
+  color: #3498DB;
+}
+
+.info h5 {
+  color: #3498DB;
+}
+
+.project-info p {
+  color: #456990;
+}
 /*
 blue: #3498DB;
 orange: #EEB868;
