--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: url(img/mainBackground.jpg) no-repeat;
+  background: url(mainBackground.jpg) no-repeat;
   background-size: cover;
 }
 .box{
