--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+a {
+  color: Deepskyblue;
+  text-decoration: none;
+}
+
+a:hover {
+  color: LightPink;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -36,14 +50,6 @@ body{
   text-align: justify;
 }
 
-a {
-  color: Deepskyblue;
-}
-
-ul{
-  margin: 0;
-  padding: 0;
-}
 .box li{
   display: inline-block;
   margin: 6px;
